añado paginacion en el mapa de hechos